# summoner

./: .gitignore  .grove.toml  .summoner.toml  AGENTS.md  ASSURANCE.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.claude/skills/summoner/: SKILL.md
.crucible/: acceptance.json  adapter.json  approvals.json  charter.json  coverage.json  flake.json  mutation.json
.githooks/: pre-push
.github/workflows/: ci.yml  patch-release-condition.mjs  release-qualification.yml  release.yml
assets/: agents-section.md  charter.md  example-order.toml  grove-demo.toml  review-charter.md  skill.md  summoner-presets.toml  summoner-starter.toml
checks/: check-host-honesty.sh  check-test-smells.sh  check-tripwires.sh  check-unit.sh
docs/: reference.md
examples/: README.md
examples/orders/: add-endpoint.toml  document-endpoint.toml
scripts/: qualify-local.sh  verify.sh
scripts/qualify/: fleet-smoke.sh  install-check.sh
src/: assurance_envelope.rs  backend_provenance.rs  backend_provenance_tests.rs  config.rs  config_load.rs  config_tests.rs  doctor.rs  drive.rs  events.rs  executor.rs  gate.rs  grove.rs  grove_compat.rs  grove_inspection.rs  grove_tests.rs  impact.rs  init.rs  init_global.rs  init_tests.rs  integration.rs  integration_tests.rs  land.rs  lifecycle.rs  main.rs  notify.rs  order.rs  outcome.rs  overview.rs  plan.rs  policy_crypto.rs  presets.rs  report.rs  review.rs  review_gate.rs  review_protocol.rs  review_worker.rs  run.rs  run_evidence.rs  run_journal.rs  run_manifest.rs  (+8 more)
src/drive/: attempt.rs  mod.rs  revise.rs
src/host/: git_claim.rs  git_host.rs  git_ledger.rs  grove_host.rs  mod.rs  partition.rs  supervise.rs  types.rs  verify_config.rs
src/host/git_host/: mod.rs  util.rs
src/land/: aggregate.rs  git.rs  merge.rs  mod.rs  plan.rs  report.rs  seal.rs
src/order/: backend.rs  graph.rs  mod.rs  policy.rs  validate.rs  validate_tests.rs  warnings.rs
src/run/: worker.rs
tests/: anti_reward.rs  anti_reward_scope.rs  anti_reward_stack.rs  anti_reward_verify.rs  fault_injection.rs  fleet.rs  fleet_control.rs  fleet_deps.rs  fleet_failures.rs  fleet_lifecycle.rs  fleet_limits.rs  fleet_plan.rs  fleet_recovery.rs  fleet_resume.rs  fleet_review.rs  fleet_signals.rs  fleet_verify.rs  host_conformance.rs  host_git.rs  init_atomic.rs  land.rs  onboarding.rs  run_recovery.rs  setup.rs  setup_doctor.rs  setup_gates.rs  setup_onboard.rs
tests/anti_reward_support/: mod.rs
tests/common/: mod.rs
tests/setup_support/: mod.rs
