[package]
name = "summoner"
version = "0.2.0"
edition = "2024"
description = "Fleet runner for LLM coding agents: host-pluggable worktrees (git or Grove), vendor-neutral executors, independent review, durable reports."
license = "MIT"
repository = "https://github.com/thomgardiner/summoner"
homepage = "https://github.com/thomgardiner/summoner"
readme = "README.md"
keywords = ["agents", "fleet", "grove", "orchestration", "cli"]
categories = ["development-tools", "command-line-utilities"]
publish = false

[[bin]]
name = "summoner"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = "0.4"
sha2 = "0.11"
toml = "1.1.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"

[profile.dist]
inherits = "release"

[package.metadata.dist]
dist = true
